--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<a routerLink="/elements">Elements</a>
-<a routerLink="/collections">Collections</a>
-<router-outlet></router-outlet>
+<div class="ui container">
+  <div class="ui secondary pointing menu">
+    <a routerLink="/elements" routerLinkActive="active" class="item"
+      >Elements</a
+    >
+    <a routerLink="/collections" class="item" routerLinkActive="active"
+      >Collections</a
+    >
+    <a routerLink="/views" class="item" routerLinkActive="active">Views</a>
+  </div>
+  <div class="ui segment">
+    <router-outlet></router-outlet>
+  </div>
+</div>
